# geocoding

./: .travis.yml  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: geoadmin.rs  lib.rs  opencage.rs  openstreetmap.rs
