[package]
name = "geocoding"
description = "Geocoding library for Rust"
version = "0.1.0"
authors = ["Stephan Hügel <urschrei@gmail.com>", "Blake Grotewold <hello@grotewold.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geocoding"
keywords = ["gecoding", "geo", "gis", "geospatial"]
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.3"
geo-types = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest ="0.9.5"
hyper = "0.12.18"
chrono = { version = "0.4", features = ["serde"] }
