[package]
name = "geocoding"
description = "Geocoding library for Rust"
version = "0.3.0"
authors = ["Stephan Hügel <urschrei@gmail.com>", "Blake Grotewold <hello@grotewold.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geocoding"
keywords = ["gecoding", "geo", "gis", "geospatial"]
readme = "README.md"
edition = "2018"

[dependencies]
thiserror = "1.0"
geo-types = "0.6"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json"] }
hyper = "0.13.6"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["reqwest/default"]
rustls-tls = ["reqwest/rustls-tls"]
